fifi entity, potato things, improved hungarian translations

--- a/build.gradle
+++ b/build.gradle
@@ -79,9 +79,14 @@ minecraft {
 // Include assets and data from data generators
 sourceSets.main.resources { srcDirs 'src/generated/resources/' }
 
+repositories {
+    maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
+}
+
 dependencies {
     // Use the latest version of Minecraft Forge
     minecraft 'net.minecraftforge:forge:1.18.2-40.0.4'
+    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.18:3.0.27')
 }
 
 compileKotlin {
