--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'kotlin'
 apply plugin: 'kotlinx-serialization'
 
-apply from: 'https://raw.githubusercontent.com/thedarkcolour/KotlinForForge/site/thedarkcolour/kotlinforforge/gradle/kff-3.6.0.gradle'
+apply from: 'https://raw.githubusercontent.com/thedarkcolour/KotlinForForge/site/thedarkcolour/kotlinforforge/gradle/kff-3.7.1.gradle'
 
-version = '1.0'
+version = '1.19.2-1.0'
 group = 'me.bzvol.fifimod'
 archivesBaseName = 'fifimod'
 
@@ -28,7 +28,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
     // Change to your preferred mappings
-    mappings channel: 'parchment', version: '2022.09.04-1.18.2'
+    mappings channel: 'parchment', version: '2022.10.16-1.19.2'
     // Add your AccessTransformer
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -85,8 +85,8 @@ repositories {
 
 dependencies {
     // Use the latest version of Minecraft Forge
-    minecraft 'net.minecraftforge:forge:1.18.2-40.0.4'
-    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.18:3.0.27')
+    minecraft 'net.minecraftforge:forge:1.19.2-43.1.1'
+    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.19:3.1.28')
 }
 
 compileKotlin {
